--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 torch = "^2.5.1"
 datasets = "^3.2.0"
 transformers = "^4.48.0"
+fairscale = "^0.4.13"
+tiktoken = "^0.9.0"
 
 
 [build-system]
