--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ datasets = "^3.2.0"
 transformers = "^4.48.0"
 fairscale = "^0.4.13"
 tiktoken = "^0.9.0"
+accelerate = "^1.4.0"
+wandb = "^0.19.7"
+tensorboard = "^2.19.0"
 
 
 [build-system]
