--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.3.0%2Bcu124-cp312-cp312-linux_x86_64.whl" }
+torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.3.0%2Bcu121-cp312-cp312-linux_x86_64.whl" }
+torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.18.0%2Bcu121-cp312-cp312-linux_x86_64.whl" }
+torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.3.0%2Bcu121-cp312-cp312-linux_x86_64.whl" }
 datasets = "^3.2.0"
 transformers = "^4.48.0"
 fairscale = "^0.4.13"
