--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.3.0%2Bcu121-cp312-cp312-linux_x86_64.whl" }
-torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.18.0%2Bcu121-cp312-cp312-linux_x86_64.whl" }
-torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.3.0%2Bcu121-cp312-cp312-linux_x86_64.whl" }
+torch = { version = "^2.6.0", source = "pytorch-cuda" }
 datasets = "^3.2.0"
 transformers = "^4.48.0"
 fairscale = "^0.4.13"
@@ -19,6 +17,10 @@ wandb = "^0.19.7"
 tensorboard = "^2.19.0"
 dotenv = "^0.9.9"
 
+[[tool.poetry.source]]
+name = "pytorch-cuda"
+url = "https://download.pytorch.org/whl/cu126"
+priority = "explicit"
 
 [build-system]
 requires = ["poetry-core"]
