--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
-torch = { version = "2.6.0", source = "pytorch-cuda" }
+torch = { version = "2.5.1", source = "pytorch-cuda" }
 datasets = "^3.2.0"
 transformers = "^4.49.0"
 fairscale = "^0.4.13"
@@ -17,10 +17,11 @@ tensorboard = "^2.19.0"
 dotenv = "^0.9.9"
 # vllm = "0.7.3"
 numpy = "^1.26.4"
+accelerate = "^1.5.2"
 
 [[tool.poetry.source]]
 name = "pytorch-cuda"
-url = "https://download.pytorch.org/whl/cu126"
+url = "https://download.pytorch.org/whl/cu124"
 priority = "explicit"
 
 [build-system]
