--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,19 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
-torch = { version = "2.5.1", source = "pytorch-cuda" }
+torch = { version = "^2.5.1", source = "pytorch-cuda" }
+
 datasets = "^3.2.0"
 transformers = "^4.49.0"
 fairscale = "^0.4.13"
 wandb = "^0.19.7"
 tensorboard = "^2.19.0"
 dotenv = "^0.9.9"
-# vllm = "0.7.3"
 numpy = "^1.26.4"
 accelerate = "^1.5.2"
+bitsandbytes = "^0.45.3"
+torchvision = { version = "^0.20.1", source = "pytorch-cuda" }
+vllm = "^0.7.3"
 
 [[tool.poetry.source]]
 name = "pytorch-cuda"
